# Geode-Root-Solver

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
examples/: main.cpp
include/: geode_root_solver.hpp
